package com.example.snakeladder;

/**
 * Strategy interface for rolling a dice.
 */
public interface Dice{
    int roll();
    int faces();
}
