package com.example.snakeladder;

public enum DifficultyLevel {
    EASY,
    HARD
}
